# text2cypher-student

./: .env.example  .gitignore  .ipynb  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  app.py  demo_notebook.ipynb  demo_notebook_non_llm_val.ipynb  example-queries.yml  example-ui-config.json  example.env  langgraph.json  pyproject.toml  streamlit_app.py  update_cypher_query_store.sh
.github/workflows/: pr-integration-tests.yaml  pr.yaml
.langgraph_api/: .langgraph_ops.pckl
agent/: agent.py
agent/components/: models.py  state.py
agent/components/final_answer/: node.py
agent/components/guardrails/: node.py
agent/components/planner/: prompts.py
agent/components/predefined_cypher/: node.py
agent/components/summarize/: node.py
agent/components/tool_selection/: prompts.py
agent/workflows/: __init__.py  advanced_text2cypher.py  edges.py  simple_text2cypher.py
agent/workflows/multi_agent/: text2cypher.py  text2cypher_with_visualization.py
agent/workflows/single_agent/: text2cypher.py
app/: README.md
app/components/: __init__.py
archive/: app.py
archive/components/: __init__.py  questions.py  sidebar.py
archive/notebooks/: t2c_test.ipynb  text2cypher_graph_agent.ipynb  text2cypher_graph_agent_patient_journey.ipynb  vector_search_graph_agent.ipynb
archive/ps_genai_agents/agents/: __init__.py
archive/ps_genai_agents/embeddings/: __init__.py
archive/ps_genai_agents/llm/: __init__.py
archive/ps_genai_agents/prompts/: agent_prompts.py  formatters.py  general_prompts.py  queries.py
archive/ps_genai_agents/tools/: __init__.py  text2cypher.py  vector_search.py
archive/workshop/01_set_up/: 01a_connections_set_up.ipynb
components/: chat.py  questions.py  sidebar.py
data/: README.md
data/bbc_recipes/: README.md
data/bbc_recipes/data_model/: bbc-recipes-data-model.json
data/bbc_recipes/ingest/: ingest.cypher  ingest_bbc_recipes.py
data/bbc_recipes/queries/: __init__.py  cypher_statements.py  queries.yml  schema.py
data/discrete_manufacturing/: config.json  ui-config.json
data/discrete_manufacturing/ingest/: sample_db_creation.cql  sample_db_creation_v1.1.cql
data/discrete_manufacturing/queries/: queries.yml
data/eval/: create_planner_dataset.py
data/iqs/: README.md  ui-config.json
data/iqs/data_model/: honda_knowledge_graph.md
data/iqs/ingest/: config.yaml  ingest_iqs.py
data/iqs/queries/: cypher_statements.py  queries.yml  schema.py
data/patient_journey/: ui-config.json
data/patient_journey/ingest/: config.yml  main.py
data/patient_journey/queries/: graph_schema.yml  queries.yml
data/seed/: prompts_seed.yaml
data/test/: __init__.py
data/utils/: create_or_update_cypher_example_vector_store.py
database/utils/: create_guardrails_dataset.py  create_or_update_cypher_example_vector_store.py
eval/: conftest.py
eval/components/guardrails/: conftest.py  test_guardrails_node.py
eval/components/planner/: conftest.py  test_planner_node.py
examples/: __init__.py
examples/apps/: cooking_assistant.ipynb
examples/cypher_examples/: ingest_cypher_examples_into_neo4j.py
examples/workflows/: adv_t2c_with_viz.ipynb  adv_t2c_with_viz_and_followups.ipynb  advanced_text2cypher.ipynb  multi_tool.ipynb
notebooks/: t2c_test.ipynb  text2cypher_graph_agent.ipynb  vector_search_graph_agent.ipynb
ps_genai_agents/: constants.py  exceptions.py
ps_genai_agents/_agents/: __init__.py  _agents.py
ps_genai_agents/agents/: __init__.py  agents.py  text2cypher.py  visualization.py
ps_genai_agents/agents/components/: state.py
ps_genai_agents/components/: models.py  state.py
ps_genai_agents/components/final_answer/: node.py
ps_genai_agents/components/gather_cypher/: node.py
ps_genai_agents/components/gather_visualizations/: node.py
ps_genai_agents/components/guardrails/: models.py  node.py  prompts.py
ps_genai_agents/cypher_query_store/: yaml_store.py
ps_genai_agents/embeddings/: embedder_protocol.py
ps_genai_agents/ui/components/: chat.py  (+2 more)
ps_genai_agents/utils/: config.py
ps_genai_agents/workflows/: edges.py  text2cypher.py  text2cypher_with_visualization.py
tests/: __init__.py  conftest.py
tests/integration/: conftest.py  docker-compose.yml  test_neo4j_connection_IT.py
workshop/01/: 01_set_up.md  01a_connections_set_up.ipynb  01a_connections_set_up.md  01b_local_set_up.ipynb  01b_local_set_up.md
workshop/01_set_up/: 01b_local_set_up.ipynb
workshop/02/: 02_data_exploration.ipynb  02_data_exploration.md  02a_data_exploration.ipynb  02b_queries.ipynb
workshop/02_data_exploration/: 02b_queries.ipynb
workshop/03/: 03_llm_chat_iqs_data.ipynb  03a_prompts.ipynb  03b_llm_chat_iqs_data.ipynb
workshop/03_basic_text2cypher/: 03a_prompts.ipynb  03b_llm_chat_iqs_data.ipynb
workshop/04/: 04_text2cypher_graph_agent.ipynb  04a_tools.ipynb  04b_text2cypher_graph_agent.ipynb
workshop/04_graph_agents/: 04a_tools.ipynb
workshop/05/: 05_streamlit.ipynb
(+167 files in other folders)
